# tiny-euler-sim

./: CMakeLists.txt
inc/: fluid.h  sim.h
src/: fluid.c  main.c  sim.c
